--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello world!</title>
+    <title>Jenkins-class</title>
 </head>
 <body>
+    <H1>Hello World</H1>
     
 </body>
 </html>
